<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="180dp"
        android:layout_height="187dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/welcome_image"
        android:src="@drawable/welcome_re_h3d9__1_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:letterSpacing=".01"
        android:fontFamily="@font/outfit_regular"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_image"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/please_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login_to_continue"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:letterSpacing=".02"
        android:fontFamily="@font/outfit_regular"
        android:textColor="@color/gray"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        app:hintTextColor="@color/gray"
        style="@style/hint_font"
        app:endIconMode="clear_text"
        app:endIconTint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/please_login"
        android:textColorHint="@color/gray"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:startIconTint="@color/gray"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            tools:ignore="VisualLintTextFieldSize" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="35dp"
        android:hint="@string/password"
        app:hintTextColor="@color/gray"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        android:textColorHint="@color/gray"
        android:letterSpacing="0.025"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="@color/gray"
        app:endIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:maxLength="17"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pass_input"
        app:layout_constraintEnd_toEndOf="@id/pass_input"
        android:text="@string/forgot_password"
        android:fontFamily="@font/outfit_regular"
        android:letterSpacing="0.025"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        app:backgroundTint="@color/purple"
        android:text="@string/LOG_IN"
        android:fontFamily="@font/outfit_regular"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:background="@drawable/shape_input"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar"
        tools:ignore="VisualLintButtonSize" />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="36dp"
        android:layout_marginTop="4dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@id/forgot_pass"
        app:layout_constraintStart_toStartOf="parent"
        android:indeterminateTint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/don_t_have_an_account"
        android:fontFamily="@font/outfit_regular"
        android:textSize="16sp"
        android:layout_marginStart="65dp"
        android:letterSpacing="0.02"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/have_account"
        app:layout_constraintStart_toEndOf="@+id/have_account"
        android:text="@string/register"
        android:fontFamily="@font/outfit_regular"
        android:layout_marginStart="1dp"
        android:textSize="16sp"
        android:letterSpacing="0.02"
        android:textColor="@color/purple" />



</androidx.constraintlayout.widget.ConstraintLayout>