<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".ForgotPasswordActivity">


    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="160dp"
        android:layout_height="187dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/welcome_image"
        android:src="@drawable/undraw_my_password_re_ydq7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/outfit_regular"
        android:letterSpacing=".001"
        android:text="@string/Forgot_password"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_image" />

    <TextView
        android:id="@+id/please_login"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/outfit_regular"
        android:letterSpacing=".02"
        android:text="@string/don_t_worry_we_ll_send_you_reset_instruction"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        app:hintTextColor="@color/gray"
        style="@style/hint_font"
        app:endIconMode="clear_text"
        app:endIconTint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/please_login"
        android:textColorHint="@color/gray"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:startIconTint="@color/gray"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            tools:ignore="VisualLintTextFieldSize" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/reset_pass_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        app:backgroundTint="@color/purple"
        android:text="Reset password"
        android:fontFamily="@font/outfit_regular"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/shape_input"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar"
        tools:ignore="VisualLintButtonSize" />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="36dp"
        android:layout_marginTop="12dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        android:indeterminateTint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:letterSpacing=".02"
        android:fontFamily="@font/outfit_regular"
        android:textColor="@color/gray"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_pass_button"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="28dp"
        android:layout_height="16dp"
        android:layout_marginEnd="2dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@id/back_login"
        app:layout_constraintEnd_toStartOf="@id/back_login"
        app:layout_constraintTop_toTopOf="@id/back_login"
        android:contentDescription="@string/back_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>