<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/outfit_regular"
        android:letterSpacing=".001"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/back_arrow"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/please_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_the_input_below_here"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:letterSpacing=".01"
        android:fontFamily="@font/outfit_regular"
        android:textColor="@color/gray"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/create_account"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:hint="@string/email"
        app:hintTextColor="@color/gray"
        style="@style/hint_font"
        app:endIconMode="clear_text"
        app:endIconTint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        android:textColorHint="@color/gray"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:startIconTint="@color/gray"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            tools:ignore="VisualLintTextFieldSize" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:hint="User name"
        app:hintTextColor="@color/gray"
        style="@style/hint_font"
        app:endIconMode="clear_text"
        app:endIconTint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/please_login"
        android:textColorHint="@color/gray"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:startIconTint="@color/gray"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            tools:ignore="VisualLintTextFieldSize" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        app:hintTextColor="@color/gray"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        android:textColorHint="@color/gray"
        android:letterSpacing="0.025"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="@color/gray"
        app:endIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input"
            android:inputType="textPassword"
            android:maxLength="17"
            android:textColor="@color/gray"
            tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Conf_pass_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        app:hintTextColor="@color/gray"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_input"
        android:textColorHint="@color/gray"
        android:letterSpacing="0.025"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="@color/gray"
        app:endIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:maxLength="17"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        app:backgroundTint="@color/purple"
        android:text="@string/register"
        android:fontFamily="@font/outfit_regular"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:background="@drawable/shape_input"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar"
        tools:ignore="VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:indeterminateTint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Conf_pass_input" />
    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/already_have_an_account"
        android:fontFamily="@font/outfit_regular"
        android:textSize="16sp"
        android:layout_marginStart="65dp"
        android:letterSpacing="0.02"
        android:layout_marginTop="30dp"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/have_account"
        app:layout_constraintStart_toEndOf="@+id/have_account"
        android:text="@string/login"
        android:fontFamily="@font/outfit_regular"
        android:layout_marginStart="1dp"
        android:textSize="16sp"
        android:letterSpacing="0.02"
        android:textColor="@color/purple" />

</androidx.constraintlayout.widget.ConstraintLayout>